# optimising-cryptocurrency-portfolios

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  deployment.md  faq.md  getting-started.md  production-readiness.md
src/cps/: __init__.py  api.py  cli.py  data.py  execution.py  forecast.py  governance.py  ingestors.py  lstm_model.py  metrics.py  networking.py  observability.py  pipeline.py  portfolio.py  realtime.py  resilience.py  risk.py  runner.py  types.py
src/cps/application/: __init__.py  artifact_service.py  data_cleaning.py  forecast_service.py  pipeline_service.py  portfolio_metrics.py  portfolio_service.py  risk_service.py  run_management.py
src/cps/config/: __init__.py  pipeline_config.py  settings.py
src/cps/domain/: __init__.py  artifacts.py  events.py  execution.py  metrics_snapshot.py  networking.py  policies.py  portfolio_math.py  primitives.py  protocols.py
src/cps/infrastructure/: __init__.py
src/cps/infrastructure/forecasters/: __init__.py  arima.py  base.py  garch.py  lstm.py  naive.py
src/cps/infrastructure/ingestors/: __init__.py  ccxt.py  csv.py  synthetic.py  yfinance.py
src/cps/infrastructure/observability/: __init__.py  logger.py  metrics.py  timer.py
src/cps/infrastructure/resilience/: __init__.py  optional.py  retry.py
src/cps/infrastructure/stores/: __init__.py  file_artifact_store.py  long_form_csv_store.py
src/cps/interface/: __init__.py
src/cps/interface/api/: __init__.py  routes.py
src/cps/interface/cli/: __init__.py  main.py
tests/: conftest.py  test_api.py  test_forecast_network_portfolio.py  test_ingestors.py  test_lstm_model.py  test_realtime.py
tests/application/: test_services.py
tests/config/: test_config.py
tests/domain/: test_domain.py
tests/infrastructure/: test_artifact_store.py  test_forecasters.py  test_ingestors.py  test_observability_resilience.py
tests/interface/: test_interfaces.py
